--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,13 @@
-version: "3.7"
-
+version: '3.7'
 services:
   app:
     build: .
-    command: >
+    command: |
       sh -c "python manage.py wait_for_db && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     volumes:
-      - .:/app
+      - '.:/app'
     ports:
-      - "8000:8000"
+      - '8000:8000'
     environment:
       - DB_HOST=db
       - DB_NAME=app
@@ -17,7 +16,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:10-alpine
+    image: 'postgres:10-alpine'
     environment:
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
